<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DiabetesMeganotes</string>
    <string name="diabetes_meganotes">Diabetes Meganotes</string>
    <string name="text_dont_let_it_waste">Reprenez votre vie en main !</string>
    <string name="register_new_user">Nouvel utilisateur</string>
    <string name="password_hint">Mot de passe</string>
    <string name="username_hint">Identifiant</string>
    <string name="pin_connect_ET">Connexion par PIN</string>
    <string name="pin_code_ET">Code PIN</string>
    <string name="lets_go">En avant!</string>
    <string name="menu">MENU</string>
    <string name="stats_short">Stats rapides</string>
    <string name="notes">Notes</string>
    <string name="stats_60d">60J : x,xx g/l</string>
    <string name="stats_7d">7J : x,xx g/l</string>
    <string name="stats_15d">15J : x,xx g/l</string>
    <string name="stats_30d">30J : x,xx g/l</string>
    <string name="fast_note">Cliquez pour enregistrer une note :)</string>
    <string name="my_objectives">Mes objectifs</string>
    <string name="my_glycemy_diary">Mes glycémies</string>
    <string name="good_to_know_part">Informations utiles</string>
    <string name="my_alerts">Mes alertes</string>
    <string name="glycemies">Glycémies</string>
    <string name="seven_days_average">Moyenne des 7 derniers jours : x,xx g/l</string>
    <string name="insulin_average_seven_days">Moyenne d\'insuline rapide des 7 derniers jours : xxx unités</string>
    <string name="add_entry_text">Ajouter une glycémie</string>
    <string name="new_entry">Nouvelle entrée</string>
    <string name="date">Date :</string>
    <string name="level_glycemy">Glycemy level :</string>
    <string name="hint_digit_glycemy">Add the digits of your glycemy here</string>
    <string name="validate">Valider</string>
    <string name="view_all_entries">Carnet: glycémies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_rv_debug">Empty RV</string>
    <string name="add_entry_insulin">Ajouter de l\'insuline</string>
    <string name="_0">0</string>
    <string name="number_units_text">Nombre d\'unités d\'insuline :</string>
    <string name="history_insulin">Carnet: Insuline</string>
    <string name="save">Enregistrer</string>
    <string name="write_your_note_here">Écrivez ici ! :)</string>
    <string name="empty_note_text">Notes vides. Cliquez ici pour en ajouter :)</string>
    <string name="not_enough_entries">Pas assez d\'entrées pour faire une moyenne…</string>
    <string name="diabetes_objectives">Mes Objectifs</string>
    <string name="defined_objectives">Objectifs définis :</string>
    <string name="add_entry_objectives">Ajouter un objectif</string>
    <string name="new_objective">Nouvel objectif</string>
    <string name="objective_duration_text">Durée (en jours)</string>
    <string name="objective_type_text">Type (sélectionnez-en un)</string>
    <string name="type_objective_food">Nourriture</string>
    <string name="type_objective_insulin">Dosage</string>
    <string name="type_objective_sport">Sport</string>
    <string name="type_objective_glycemy">Glycémie</string>
    <string name="description_objective_text">Décrire l\'objectif</string>
    <string name="short_desc_of_objective_hint_input">Brève description</string>
    <string name="days_number_max_hint">Nombre de jours (60 max)</string>
    <string name="objective_template">Objective</string>
    <string name="type_template">Type</string>
    <string name="duration_prototype">Duration</string>
    <string name="desc_prototype">Description</string>
    <string name="trans_out_motion_text">Désactiver l\'alerte</string>
    <string name="add_new_alert_text">Ajouter une alerte</string>
    <string name="trans_in_motion_text">Activer l\'alerte</string>
    <string name="choose_alert_type_tv">Cliquer sur l\'icone du type d\'alerte pour le sélectionner.</string>
    <string name="previous">Précédent</string>
    <string name="next">Suivant</string>
    <string name="alert_type_selected">Type d\'alerte : Aucun</string>
    <string name="confirm">Confirmer</string>
    <string name="choose_alert_text">Choisissez un nom pour votre alerte !</string>
    <string name="alert_name_hint">Nom de l\'alerte</string>
    <string name="alert_desc_hint">Description de l\'alerte</string>
    <string name="choose_alert_desc_tv">Créer une description pour votre alerte</string>
    <string name="choose_alert_sdate_tv">Début de l\'alerte</string>
    <string name="choose_alert_edate_tv">Fin de l\'alerte</string>
    <string name="terminate">Terminer</string>
    <string name="add_entry_alert">Ajouter une alerte</string>
    <string name="see_all_alerts">Voir toutes les alertes</string>
    <string name="title_existing_user_auth">Etes-vous…</string>
    <string name="username_prototype">username</string>
    <string name="title_new_user_auth">Nouvel utilisateur</string>
    <string name="instructions_create_username">Choisissez un nom d\'utilisateur</string>
    <string name="instructions_create_avatar">Choisissez un avatar</string>
    <string name="create_user_validation_text">Créer utilisateur</string>
    <string name="hint_create_username">Écrire ici (20 caractères. max)</string>
    <string name="no">Non</string>
    <string name="yes">Oui</string>
    <string name="dialog_delete_existing_user" tools:ignore="Typos">Nombre max d\'utilisateurs atteint (3). Supprimez un utilisateur pour en créer un autre.</string>
    <string name="dialog_delete_existing_user_confirmation">Etes-vous sûr de vouloir supprimer %1$s ?</string>
    <string name="ok">OK</string>
    <string name="dialog_delete_insulin_entry">Supprimer cette entrée ?</string>
    <string name="new_value_insulin_units_update">Nouvelle valeur</string>
    <string name="iscustom_objective_text">Vous souhaitez…</string>
    <string name="choose_an_objective">Choisir un objectif</string>
    <string name="define_an_objective">Définir un objectif</string>
    <string name="show_entry_objectives">Montrer objectifs</string>
    <string name="start_date_prototype">Commencé depuis</string>
    <string name="Choose_objective_pack">Choisissez un pack :</string>
    <string name="first_pack_name">Réduire l\'alimentation \nDurée de 7 jours</string>
    <string name="second_pack_name">Faire plus de sport \nDurée de 7 jours</string>
    <string name="third_pack_name">Faire moins d\'insuline \nDurée de 7 jours</string>
    <string name="forth_pack_name">Améliorer la glycémie \nDurée de 7 jours</string>
    <string name="objective_number">Objectif n°%1$d</string>
    <string name="type">Type : %1$s</string>
    <string name="duration">Duration : %1$sJ</string>
    <string name="description">Description : %1$s</string>
    <string name="start">Début : %1$s</string>
    <string name="units">Unités : %1$s</string>
    <string name="date_entries_unit">Date : %1$s</string>
    <string name="number_analysis">Analyse n° : %1$d</string>
    <string name="glycemia">Glycémie : %1$s</string>
    <string name="start_the">Commence le : %1$s</string>
    <string name="finish_the">Finit le : %1$s</string>
    <string name="type_alarm">Type : %1$s</string>
    <string name="name_alarm">Nom : %1$s</string>
    <string name="memo_alarm">Mémo : %1$s</string>
    <string name="number_alarm">Alarme n°%1$d</string>
</resources>
