<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DashboardActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@drawable/ic_dashboard_reduced_bg" />

    <TextView
        android:id="@+id/title_app_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/dashboard_first_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_app_TV"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/fast_stats_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fast_stats_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stats_short"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/fast_stats_60d_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/stats_60d"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/fast_stats_30d_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/stats_30d"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/fast_stats_15d_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/stats_15d"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/fast_stats_7d_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/stats_7d"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fast_stats_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fast_note_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/fast_note_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/fast_note"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/fast_note_EV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:visibility="gone"
                android:background="@null"
                android:hint="@string/write_your_note_here"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/fast_note_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_classic"
                android:padding="10dp"
                android:text="@string/save"
                android:visibility="gone"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/my_objectives_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dashboard_first_container"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/btn_classic"
        android:padding="10dp"
        android:text="@string/my_objectives"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/my_glycemy_diary_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_objectives_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/btn_classic"
        android:padding="10dp"
        android:text="@string/my_glycemy_diary"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/my_alerts_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_glycemy_diary_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/btn_classic"
        android:padding="10dp"
        android:text="@string/my_alerts"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/my_infos_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_alerts_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/btn_classic"
        android:padding="10dp"
        android:text="@string/good_to_know_part"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic" />

</RelativeLayout>