<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:alpha="0.85"
    android:background="@drawable/bg_simple"
    android:orientation="vertical">

    <TextView
        android:id="@+id/objectives_item_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/objective_template"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/objectives_item_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/type_template"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/objectives_item_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/duration_prototype"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/objectives_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/desc_prototype"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/objectives_item_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/start_date_prototype"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/delete_objective_entry_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_delete_forever_black_24dp" />

</LinearLayout>