<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:background="@drawable/ic_cool_diab" />

    <TextView
        android:id="@+id/title_app_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/diabetes_meganotes"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitle_app_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_app_TV"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/text_dont_let_it_waste"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/connect_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle_app_TV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/connexion"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/creds_username_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_TV"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="italic"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/creds_pwd_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/creds_username_ET"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="italic"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/pin_connection_ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/creds_pwd_ET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/pin_connect_ET"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/creds_pin_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pin_connection_ET"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/pin_code_ET"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="italic"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/validation_auth_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/creds_pin_ET"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/lets_go"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_classic"/>

</RelativeLayout>